--- a/base/podinfo/podinfo-release.yaml
+++ b/base/podinfo/podinfo-release.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podinfo
   namespace: apps
 spec:
-  serviceAccountName: dev-team
+  serviceAccountName: flux_apps
   releaseName: podinfo
   chart:
     spec:
