--- a/base/monitoring/kustomization.yaml
+++ b/base/monitoring/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./monitoring/flux-monitoring-grafana-release.yaml
-  - ./monitoring/flux-monitoring-repository.yaml
-  - ./monitoring/flux-monitoring-loki-release.yaml
-  - ./monitoring/flux-monitoring-release.yaml
+  - flux-monitoring-grafana-release.yaml
+  - flux-monitoring-repository.yaml
+  - flux-monitoring-loki-release.yaml
+  - flux-monitoring-release.yaml
