--- a/base/monitoring/flux-monitoring-release.yaml
+++ b/base/monitoring/flux-monitoring-release.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: kube-prometheus-stack
-  namespace: flux-system
+  namespace: monitoring
 spec:
   interval: 1h0m0s
   path: ./manifests/monitoring/kube-prometheus-stack
