--- a/base/monitoring/flux-monitoring-grafana-release.yaml
+++ b/base/monitoring/flux-monitoring-grafana-release.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: monitoring-config
-  namespace: monitoring
+  namespace: apps
 spec:
   dependsOn:
   - name: kube-prometheus-stack
