--- a/base/monitoring/flux-monitoring-loki-release.yaml
+++ b/base/monitoring/flux-monitoring-loki-release.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: loki-stack
-  namespace: monitoring
+  namespace: apps
 spec:
   dependsOn:
   - name: kube-prometheus-stack
