--- a/staging/podinfo/kustomization.yaml
+++ b/staging/podinfo/kustomization.yaml
@@ -3,6 +3,4 @@ kind: Kustomization
 resources:
   - ../../base/podinfo
 patchesStrategicMerge:
-  # - podinfo-values.yaml
-  # - sealed-secret-val<ues.yaml
-  - sops_secrets.yaml
+  - podinfo-values.yaml
