add hpa podinfo

--- a/base/podinfo/kustomization.yaml
+++ b/base/podinfo/kustomization.yaml
@@ -3,3 +3,14 @@ kind: Kustomization
 resources:
   - podinfo-repository.yaml
   - podinfo-release.yaml
+patches:
+  - patch: |-
+      apiVersion: autoscaling/v2beta2
+      kind: HorizontalPodAutoscaler
+      metadata:
+        name: podinfo
+      spec:
+        minReplicas: 3             
+    target:
+      name: podinfo
+      kind: HorizontalPodAutoscaler
