--- a/staging/podinfo/secrets.yaml
+++ b/staging/podinfo/secrets.yaml
@@ -4,7 +4,7 @@ metadata:
     name: podinfo
     namespace: apps
 stringData:
-    ui-message: ENC[AES256_GCM,data:QauXLyQ=,iv:lN9VBdj1JruePvJFGmxG+kfvtUoxx3NdxepNmnlp3r4=,tag:0q+PUSAVAH4cEmwvM/bK/Q==,type:str]
+    uimessage: ENC[AES256_GCM,data:QauXLyQ=,iv:lN9VBdj1JruePvJFGmxG+kfvtUoxx3NdxepNmnlp3r4=,tag:0q+PUSAVAH4cEmwvM/bK/Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
