--- a/staging/podinfo/kustomization.yaml
+++ b/staging/podinfo/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/podinfo
-  # - secrets.yaml
+  - secrets.yaml
 patchesStrategicMerge:
   - podinfo-values.yaml
