--- a/base/podinfo/podinfo-release.yaml
+++ b/base/podinfo/podinfo-release.yaml
@@ -2,9 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: apps
+  namespace: flux-system
 spec:
-  serviceAccountName: flux-apps
+  # serviceAccountName: flux-apps
   releaseName: podinfo
   chart:
     spec:
