--- a/base/podinfo/podinfo-release.yaml
+++ b/base/podinfo/podinfo-release.yaml
@@ -1,10 +1,16 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: podinfo
+
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: flux-system
+  namespace: podinfo
 spec:
-  serviceAccountName: kustomize-controller
   releaseName: podinfo
   chart:
     spec:
