--- a/staging/podinfo/secrets.yaml
+++ b/staging/podinfo/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: podinfo-secrets
-    namespace: podinfo
+    namespace: apps
 stringData:
     values.yaml: ENC[AES256_GCM,data:/RJ68BjS4xfO9EE37phti/AfmldGqeddCEgGOD4wSYaB3Mgwhyn0aYnkf7U=,iv:qrx6PT9EOJGppIzEzq/CzrcrdES4FUfoyJpYbwi0jvw=,tag:u8r4Jwu+xZuem4HP0eX9gA==,type:str]
 sops:
