--- a/staging/podinfo/kustomization.yaml
+++ b/staging/podinfo/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/podinfo
-  # - secrets.yaml
-  # - secrets2.yaml
+  - secrets.yaml
+  - secrets2.yaml
 patchesStrategicMerge:
   - podinfo-values.yaml
