--- a/staging/podinfo/podinfo-values.yaml
+++ b/staging/podinfo/podinfo-values.yaml
@@ -7,8 +7,8 @@ spec:
   chart:
     spec:
       version: '>=1.0.0-alpha'
-  # values:
-  #     replicaCount: 4
+  values:
+    replicaCount: 4
   valuesFrom:
   - kind: Secret
     name: podinfo-secrets
