--- a/infra/edu/podinfo/kustomization.yaml
+++ b/infra/edu/podinfo/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../base/podinfo
+  - ../../../base/podinfo
   - secrets.yaml
   - secrets2.yaml
 patchesStrategicMerge:
