--- a/infra/edu/podinfo/kustomization.yaml
+++ b/infra/edu/podinfo/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
   - ../../../base/podinfo
   - secrets.yaml
+  - secrets2.yaml
 patchesStrategicMerge:
   - podinfo-values.yaml
