--- a/base/podinfo/podinfo-release.yaml
+++ b/base/podinfo/podinfo-release.yaml
@@ -1,8 +1,15 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: podinfo
+
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: apps
+  namespace: podinfo
 spec:
   serviceAccountName: flux-apps
   releaseName: podinfo
