--- a/infra/edu/podinfo/secrets.yaml
+++ b/infra/edu/podinfo/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: podinfo-secrets
-    namespace: apps
+    namespace: podinfo
 stringData:
     values.yaml: ENC[AES256_GCM,data:w3rfDPZ+ge91KtrnG2R4IvTDpJHuOTqZ5c6Bc+hu2RCa8aoX4Hd19O8q5/I=,iv:q+e4b4TJNNmVso81tUMDZkbLIkPVoEZ3yIc+GO6liEo=,tag:KF34KnV5HrjP//ULxLowvQ==,type:str]
 sops:
@@ -11,8 +11,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-07-07T09:04:24Z"
-    mac: ENC[AES256_GCM,data:hIfY3amrxQO2w7OR2Cwi2A4kVvUJVRKKcJeCt61k0h8mu4paNGkuXrcWGOYcEmKyNKY1A0fG9/ZQhGpH4Us2MeABRL+TotLrZ6+AlqeEbIwee7Nx3DYQC6ysuWhfYNW++z2opfetVo65fAqj8FJpOYUODpiHO2op29sSCBbacFQ=,iv:aai+sQ8cqvOkaf/Tx1miM99xoasBiOknME8bsGJicgA=,tag:FDVqOILdTVWc8eLzDlnvRw==,type:str]
+    lastmodified: "2022-07-07T11:23:15Z"
+    mac: ENC[AES256_GCM,data:8aVEb8Zp2n4AlZ9xHdM1bIgqzJDcWvIbXiZbCiejtkCaciRBGd9PV8Fpdg7/qkOEsraJHAYfblLMg1XKSbEwopVGJNuLsGY0eWUka4ZYZDfKWbaD/ruQX7FYBjEQUiAxq2EoL6Nqh6fcwmSxzmnft5KR0CLf2AKVjzfFYe4DpQ8=,iv:yLaFmFzNnQ+yF7BWW72fhxODDylLTVjLlf7IwxvgRew=,tag:L+vT8FtdPwLsokUCASnikQ==,type:str]
     pgp:
         - created_at: "2022-07-06T16:46:49Z"
           enc: |
