--- a/infra/edu/podinfo/secrets2.yaml
+++ b/infra/edu/podinfo/secrets2.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: podinfo-secrets2
-    namespace: apps
+    namespace: podinfo
 stringData:
     values.yaml: ENC[AES256_GCM,data:w3rfDPZ+ge91KtrnG2R4IvTDpJHuOTqZ5c6Bc+hu2RCa8aoX4Hd19O8q5/I=,iv:q+e4b4TJNNmVso81tUMDZkbLIkPVoEZ3yIc+GO6liEo=,tag:KF34KnV5HrjP//ULxLowvQ==,type:str]
 sops:
@@ -11,8 +11,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-07-07T10:46:31Z"
-    mac: ENC[AES256_GCM,data:tkDXhdMuVnANmuoTZNFt9/tukUqSA2gaNWp0UHgdHCahp3v+CgJvX5ynsOsHY97mPXxZ2Lg3uoV2hBzuVWMHipZVRr9WKszskl6lpvSb+JalJaMmyyBxdcspqJ9lwTgzB045MXsdg6DcrBPDdTlLCOqt2RJBn27SCT/kDTCbfao=,iv:PYkpfPm1nRqS0+wr6quqqfTPRRPJSJP/kFyYb6iSXfk=,tag:4IkmZ4Z/fYXf9wLj27yHvw==,type:str]
+    lastmodified: "2022-07-07T11:23:25Z"
+    mac: ENC[AES256_GCM,data:AUYGCd1iThL6X2/6Ci42ODThB7mB+uGZD38Zqv72IsetxsqKSRRw4v6YGB0oNzKL3IAjMt3PwT7JFg3vlr2cc7Bu9mwcvNztxzpMIvAhKqO602V2E/Po3gjXtVNy07QJlFohnmg7b0jZdZ+P98XnsnzIhn54UuXeF0f0WQKgWu4=,iv:YneGvKYwbrejXoblnks3/UPnleMGJfjOoOE+UyhohLU=,tag:Og2t4lA9184KCIg8oWysrw==,type:str]
     pgp:
         - created_at: "2022-07-06T16:46:49Z"
           enc: |
