--- a/infra/edu/podinfo/kustomization.yaml
+++ b/infra/edu/podinfo/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - ../../../base/podinfo
   - secrets.yaml
   - secrets2.yaml
+  - secrets3.yaml
 patchesStrategicMerge:
   - podinfo-values.yaml
