--- a/infra/edu/podinfo/secrets.yaml
+++ b/infra/edu/podinfo/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: podinfo-secrets
-    namespace: podinfo
+    namespace: apps
 stringData:
     values.yaml: ENC[AES256_GCM,data:w3rfDPZ+ge91KtrnG2R4IvTDpJHuOTqZ5c6Bc+hu2RCa8aoX4Hd19O8q5/I=,iv:q+e4b4TJNNmVso81tUMDZkbLIkPVoEZ3yIc+GO6liEo=,tag:KF34KnV5HrjP//ULxLowvQ==,type:str]
 sops:
@@ -11,8 +11,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-07-07T11:23:15Z"
-    mac: ENC[AES256_GCM,data:8aVEb8Zp2n4AlZ9xHdM1bIgqzJDcWvIbXiZbCiejtkCaciRBGd9PV8Fpdg7/qkOEsraJHAYfblLMg1XKSbEwopVGJNuLsGY0eWUka4ZYZDfKWbaD/ruQX7FYBjEQUiAxq2EoL6Nqh6fcwmSxzmnft5KR0CLf2AKVjzfFYe4DpQ8=,iv:yLaFmFzNnQ+yF7BWW72fhxODDylLTVjLlf7IwxvgRew=,tag:L+vT8FtdPwLsokUCASnikQ==,type:str]
+    lastmodified: "2022-07-07T14:17:22Z"
+    mac: ENC[AES256_GCM,data:U/nCXrXD0cunQjb/VQYpT2XZ521gliwTrl7fIrUSqsr1gghXn2GBbyVgaquKYBdlU9vWkC5XMwUp5JIEVt4E5NcmFGKVmiqHHuud8sFwMCeQYdYJWVj+ya3HikoXb3XXC/6lJkPsrLxWHfejqb0U+hT0vCBQa3loP/fIxAPHA9E=,iv:eTM7/rR0zx9nRzic+AWR7uoMH9hXDAJgQjejHjj/7YM=,tag:cnGVavYkie62/Nwad1daBg==,type:str]
     pgp:
         - created_at: "2022-07-06T16:46:49Z"
           enc: |
