--- a/infra/edu/podinfo/secrets3.yaml
+++ b/infra/edu/podinfo/secrets3.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: podinfo-secrets2
-    namespace: podinfo
+    namespace: apps
 stringData:
     values.yaml: ENC[AES256_GCM,data:w3rfDPZ+ge91KtrnG2R4IvTDpJHuOTqZ5c6Bc+hu2RCa8aoX4Hd19O8q5/I=,iv:q+e4b4TJNNmVso81tUMDZkbLIkPVoEZ3yIc+GO6liEo=,tag:KF34KnV5HrjP//ULxLowvQ==,type:str]
 sops:
@@ -11,8 +11,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-07-07T11:23:25Z"
-    mac: ENC[AES256_GCM,data:AUYGCd1iThL6X2/6Ci42ODThB7mB+uGZD38Zqv72IsetxsqKSRRw4v6YGB0oNzKL3IAjMt3PwT7JFg3vlr2cc7Bu9mwcvNztxzpMIvAhKqO602V2E/Po3gjXtVNy07QJlFohnmg7b0jZdZ+P98XnsnzIhn54UuXeF0f0WQKgWu4=,iv:YneGvKYwbrejXoblnks3/UPnleMGJfjOoOE+UyhohLU=,tag:Og2t4lA9184KCIg8oWysrw==,type:str]
+    lastmodified: "2022-07-07T14:17:44Z"
+    mac: ENC[AES256_GCM,data:X0u4um18dxIT4m/pk1ptdB+H+wLknjqrr9HXfu5h73y/XB/xOBqRSmHfyznUT+Vwr5cdbcqPejC7XDVsYW1K5jW/8Z/P/4nNiZz7CDflIfrQDvVuDE35L6u+9egPzPrWVWcVVx0AjVonBdrnO2Coh4MJjngDA8jzZ/4BJVlGeZQ=,iv:MutZpl16bL9yf5AU1J3RZrZob2UgH03CBu3gDM1R4hY=,tag:JgD2RWmAO0Ek6wrShe/HoA==,type:str]
     pgp:
         - created_at: "2022-07-06T16:46:49Z"
           enc: |
