--- a/base/podinfo/podinfo-release.yaml
+++ b/base/podinfo/podinfo-release.yaml
@@ -1,15 +1,9 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: podinfo
-
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: podinfo
+  namespace: apps
 spec:
   serviceAccountName: flux-apps
   releaseName: podinfo
